# drybones

./: .gitignore  Cell.py  Column.py  Line.py  PrintingUtil.py  ProjectUtil.py  ReadingUtil.py  Row.py  RowLabel.py  StringValidation.py  Text.py  Validation.py  design.txt  drybones.py  pyproject.toml  todo.txt
drybones/: PrintingUtil.py
groups/: config.py  project.py  read.py
groups/config/: commands.py
groups/project/: commands.py
notes/: design.txt  done.txt  syntax.txt  todo.txt  wontdo.txt
playground/: ConvertLangdocInterleavedToDryBones.py  ProtoConticExampleSentences.txt  repl.py
projects/Daool/.drybones/: project.yaml
projects/raw_texts/: LCC8.txt
src/drybones/: AnalysisUtil.py  BasicREPL.py  Cell.py  ColorUtil.py  Column.py  Constants.py  DebuggingUtil.py  DiacriticDict.py  DiacriticsUtil.py  DryBonesSession.py  FileEditingUtil.py  GenericObject.py  InputUtil.py  InvalidInput.py  Line.py  LineDesignation.py  LineUtil.py  LinesAndResidues.py  OptionsUtil.py  Parse.py  ParsingUtil.py  PrintingUtil.py  ProjectUtil.py  REPLUtil.py  ReadingUtil.py  Row.py  RowLabel.py  SearchResult.py  StringMatch.py  StringUtil.py  StringValidation.py  Text.py  Validation.py  WordAnalysis.py  main.py
src/drybones/groups/: accent.py  analyze.py  edit.py  enter.py  map.py  merge.py  parse.py  project.py  read.py  search.py  text.py  wrap.py
