[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drybones"
version = "0.0.1"
authors = [
  { name="Wesley Kuhron Jones" },
]
description = "A command line interface for parsing linguistic texts"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Kuhron/drybones"
Issues = "https://github.com/Kuhron/drybones/issues"
